--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,3 +18,16 @@ body{
     flex-wrap: wrap;
     width: 80%;
   }
+
+  .item {
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px 1%;
+    min-width: 320px;
+    max-width: 410px;
+    width: 100%;
+    text-align: center;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    box-sizing: border-box;
+  }
